# ontheflywallet

./: Cargo.toml  LICENSE  README.md  readme
.github/workflows/: ci.yaml
src/: args.rs  cmd.rs  dispatcher.rs  lib.rs  wallet.rs
src/cmd/: address.rs  clear.rs  login.rs  mod.rs  transfer.rs
